Prevent document from overflowing to the bottom (y-axis)

--- a/weather-forecast/src/index.css
+++ b/weather-forecast/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   cursor: url("./resources//images/cursor.png"), auto;
   overflow-x: hidden;
+  overflow-y: hidden !important;
 }
 
 code {
